--- a/Themes/Prostar/resources/less/main.less
+++ b/Themes/Prostar/resources/less/main.less
@@ -2,8 +2,8 @@
 
 @import "../../node_modules/bootstrap/less/bootstrap.less";
 @import "../../node_modules/font-awesome/less/font-awesome.less";
-@import (inline) "../../node_modules/prismjs/themes/prism.css";
-@import "variables.less";
+//@import (inline) "../../node_modules/prismjs/themes/prism.css";
+//@import "variables.less";
 @import "bootswatch";
 
 article,
