Fix menu system with new provider

--- a/Themes/Prostar/resources/less/main.less
+++ b/Themes/Prostar/resources/less/main.less
@@ -2,8 +2,8 @@
 
 @import "../../node_modules/bootstrap/less/bootstrap.less";
 @import "../../node_modules/font-awesome/less/font-awesome.less";
-//@import (inline) "../../node_modules/prismjs/themes/prism.css";
-//@import "variables.less";
+@import (inline) "../../node_modules/prismjs/themes/prism.css";
+@import "variables.less";
 @import "bootswatch";
 
 article,
@@ -5825,6 +5825,9 @@ a.disabled:hover {
 .btn.btn-micro .caret {
   margin: 5px 0;
 }
+.blog{
+  margin-left: 10px;
+}
 .blog-row-rule,
 .blog-item-rule {
   border: 0;
@@ -7584,7 +7587,7 @@ figcaption {
     margin-right: 0;
   }
   .nav-pills > li > a {
-    margin-bottom: 3px;
+    margin-bottom: 1px;
   }
   .nav-pills  > li:last-child > a {
     margin-bottom: 1px;
