--- a/Themes/Prostar/resources/less/main.less
+++ b/Themes/Prostar/resources/less/main.less
@@ -665,6 +665,10 @@ h4 small {
   margin: 18px 0 27px;
   border-bottom: 1px solid #eee;
 }
+.page-body{
+  margin-left: 20px;
+  padding-right: 20px;
+}
 ul,
 ol {
   padding: 0;
