--- a/Themes/Prostar/resources/less/main.less
+++ b/Themes/Prostar/resources/less/main.less
@@ -3743,6 +3743,7 @@ input[type="submit"].btn.btn-mini {
   background-color: #000000 \9;
 }
 .breadcrumb {
+  padding-left: 0px;
   padding: 8px 15px;
   margin: 0 0 18px;
   list-style: none;
