fixed mobile menu

--- a/Themes/Prostar/resources/less/main.less
+++ b/Themes/Prostar/resources/less/main.less
@@ -7610,7 +7610,7 @@ figcaption {
 @media (max-width: 979px) {
   .nav-collapse.in.collapse {
     overflow: visible;
-    height: 0;
+    height: fit-content;
     z-index: 100;
   }
   .nav-collapse .nav > li.active > a {
