--- a/Themes/Prostar/resources/less/main.less
+++ b/Themes/Prostar/resources/less/main.less
@@ -55,6 +55,14 @@ sub {
   bottom: -0.25em;
 }
 img {
+  max-width: 100%;
+  width: auto \9;
+  height: auto;
+  vertical-align: middle;
+  border: 0;
+  -ms-interpolation-mode: bicubic;
+}
+.header-img {
   border-radius: 5px;
   max-width: 100%;
   width: auto \9;
